# outfit-wizard-mainline-2

./: .gitignore  .replit  Pasted--Connection-error-Connection-failed-with-status-503-and-response-DOCTYPE-html-html-lang-en--1733886235672.txt  Pasted--The-image-presents-a-minimalist-swatch-layout-designed-for-clarity-and-functionality-It-consists-o-1732925202282.txt  Pasted--use-client-import-useState-from-react-import-Avatar-AvatarFallback-AvatarImage-fro-1733952155629.txt  Pasted-2024-11-17-00-05-34-154-streamlit-config-WARNING-global-disableWatchdogWarning-is-not-a-vali-1731801971284.txt  Pasted-Connection-error-Connection-failed-with-status-502-and-response-DOCTYPE-html-html-lang-en--1731718219287.txt  Pasted-Depending-on-the-device-they-re-using-people-can-make-gestures-on-a-touchscreen-in-the-air-or-on--1734655671278.txt  Pasted-Sign-up-and-sign-in-options-Clerk-provides-multiple-options-for-configuring-a-sign-up-and-sign-in-fl-1734195745706.txt  README.md  app.py  auth.py  auth_routes.py  auth_utils.py  backup_manager.py  capture_screenshots.py  clothing_templates.py  color_recommendation.py  color_utils.py  create_placeholder_images.py  create_rect7.py  create_rectangle_7.py  data_manager.py  error_pages.py  firebase_config.py  fit_predictor.py  main.py  middleware.py  models.py  outfit_generator.py  pyproject.toml  recommendation_engine.py  replit.nix  replit_zip_error_log.txt  requirements.txt  style_assistant.py  test_backup.py  user_profile.py
.streamlit/: config.toml  style.css
attached_assets/: LogAndReg.py  (+1 more)
backups/: backup_manifest.json
(+30 files in other folders)
